--- a/Style/Sass/Main.scss
+++ b/Style/Sass/Main.scss
@@ -330,8 +330,10 @@ input[type=text] {
         transform-origin: top left;
     }
     &__card {
+        display: flex;
+        justify-content: space-between;
         position: relative;
-        padding: 12px 16% 12px 10px;
+        padding: 12px;
         margin: 15px 0px;
         background-color: white;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -362,7 +364,10 @@ input[type=text] {
             opacity: 1;
         }
         &:active .menu__price {
-            right: 24%;
+            transform: translateX(-80px);
+        }
+        &:active .menu__txt {
+            margin-right: 90px;
         }
     }
     &__check {
@@ -376,12 +381,22 @@ input[type=text] {
         transition-delay: 100ms;
     }
     &__txt {
-        margin-right: 20%;
+        overflow: hidden;
+        margin-right: 10px;
+    }
+    & h3 {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap
+    }
+    & p {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap
     }
     &__price {
-        position: absolute;
-        right: 5%;
-        bottom: 10px;
+        align-self: flex-end;
+        padding-right: 10px;
         transition-duration: 300ms;
     }
     & h2 {
@@ -423,10 +438,9 @@ input[type=text] {
 
 .loadspinner {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     &__txt {
-        margin-left: 20px;
-        font-size: 60px;
+        font-size: 36px;
         animation: bounce 1s infinite;
         &--1 {
             color: $colour-primary;
@@ -445,26 +459,36 @@ input[type=text] {
 .loadspin {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     height: 150px;
     &__element {
-        width: 20px;
-        height: 20px;
-        border-radius: 20px;
-        margin-top: 50px;
-        margin-left: 30px;
-        animation: load 1s infinite;
+        width: 20%;
+        height: 15px;
+        margin-top: 30px;
+        animation: load 0.6s infinite;
         &--1 {
             background-color: $colour-tertiary;
             animation-delay: 0s;
         }
         &--2 {
+            background-color: $colour-tertiary;
+            animation-delay: 0.1s;
+        }
+        &--3 {
+            background-color: $colour-secondary;
+            animation-delay: 0.2s;
+        } 
+        &--4 {
             background-color: $colour-secondary;
             animation-delay: 0.3s;
         }
-        &--3 {
+        &--5 {
             background-color: $colour-primary;
-            animation-delay: 0.6s;
+            animation-delay: 0.4s;
+        }
+        &--6 {
+            background-color: $colour-primary;
+            animation-delay: 0.5s;
         } 
     }
     
